ProjetCompil/Verif/Test/fail/typeNonCompatible10.cas
program
	A : array [1..14] of boolean;
	B : real;
	C : boolean;
begin
	C := B >= A;
end.
	
